# speclib

./: CMakeLists.txt  extract2d.cpp  fit_star_spectrum.cpp  stack1d.cpp
generic/: CMakeLists.txt  extract2d.cpp  fit_star_spectrum.cpp  flux_rescale.cpp  get_fluxes.cpp  stack1d.cpp  stack2d.cpp
kmos/: CMakeLists.txt  README.md  cdetect.cpp  clinefit.cpp  collapse_helpers.sh  contsub.cpp  cube2slit.cpp  extract_ifu.cpp  fill_nan.cpp  make_calib.sh  make_collapsed.sh  make_combine.sh  make_msub.sh  make_profile.cpp  make_sci.sh  make_shifts.cpp  median_sub.cpp  merge_cs_nn.cpp  multispecfit.cpp  multispecfit_sof.cpp  reduce.cpp  reduce_calib.sh  reduce_sci.sh  reduce_stdstar.sh  rename.cpp  stack_cubes.cpp
mosfire/: CMakeLists.txt  check_telluric.pro  telluric.cpp
xshooter/: CMakeLists.txt  README.md  correct_dark.cpp  get_telluric.cpp  plot_profile.pro  plot_telluric.pro  reduce.sh  rename.cpp
